--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Sahr Solar Sumana # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Data Science Portfolio for my MSc with the University of Essex 
   <br><br>
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/sahr-sumana-724768a7/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # 351076709
+google_analytics: UA-000000-0 # 
