--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Sahr Solar Sumana # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Science Portfolio for my MSc with the University of Essex 
-  <br><br>
+  <br>Data Science Portfolio for my MSc with the University of Essex <br>
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/sahr-sumana-724768a7/">View My LinkedIn Profile</a> 
