--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sahr Solar Sumana # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/sahr.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br>Data Science Portfolio for my MSc with the University of Essex Online <br>
   
